--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -8,8 +8,19 @@
 
 .card-header {
   font-size: 1.05em;
-  font-weight: bold; }
+  font-weight: bold;
+  margin: 5px;
+  text-align: center; }
 
 .p-container {
   width: 80px;
   margin: 10px auto 10px auto; }
+
+.less-than-half {
+  color: red;
+  font-size: .75em; }
+
+.more-than-half {
+  color: green;
+  font-size: .85em;
+  font-weight: bold; }
