--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,2 +1,11 @@
-body {
-  background-color: lavender; }
+.app-render {
+  text-align: center;
+  background-color: #8a8d90;
+  padding-top: 10px; }
+
+.search-input {
+  height: 25px;
+  width: 250px;
+  border-radius: 5px;
+  padding-left: 5px;
+  margin-bottom: 10px; }
