--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,5 +1,15 @@
 @import 'variables.scss';
 
-body {
-  background-color: $my-color;
+.app-render {
+  text-align: center;
+  background-color: rgb(138, 141, 144);
+  padding-top: 10px;
+}
+
+.search-input {
+  height: 25px;
+  width: 250px;
+  border-radius: $border-radius;
+  padding-left: 5px;
+  margin-bottom: 10px;
 }
