--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,10 +1,10 @@
 .card {
+  display: inline-block;
   width: 200px;
   font-size: .85em;
-  margin-bottom: 5px;
+  margin: 10px;
   border-radius: 5px;
-  border: 1px dotted black;
-  background-color: rgba(100, 25, 100, 0.3); }
+  background-color: #2584e4; }
 
 .card-header {
   font-size: 1.05em;
