--- a/src/Styles/CompareContainer.css
+++ b/src/Styles/CompareContainer.css
@@ -1,3 +1,11 @@
 .compare-container {
-  height: 500px;
-  background-color: white; }
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  justify-content: space-around; }
+
+.compared-cards {
+  color: black;
+  height: 50px;
+  text-align: center;
+  padding-top: 15px; }
