--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -3,8 +3,12 @@
   width: 200px;
   font-size: .85em;
   margin: 10px;
+  border: none;
   border-radius: 5px;
   background-color: #2584e4; }
+
+.active {
+  border: 2px solid green; }
 
 .card-header {
   font-size: 1.05em;
@@ -36,6 +40,19 @@
   border-radius: 5px;
   padding-left: 5px;
   margin-bottom: 10px; }
+
+.search-list {
+  background: white;
+  max-height: 200px;
+  overflow-y: scroll;
+  margin: 0 auto 0 auto;
+  width: 250px; }
+
+.list-items {
+  border-bottom: 1px solid lightgrey;
+  padding-left: 3px;
+  text-align: left;
+  text-decoration: none; }
 
 .card-container {
   display: flex;
