Implement buttons to change data set in app

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -2,6 +2,7 @@
 @import 'App.scss';
 @import 'CardContainer.scss';
 @import 'CompareContainer.scss';
+@import 'DataButton.scss';
 
 * {
   margin: 0;
