--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -9,3 +9,7 @@
   border-radius: 5px;
   padding-left: 5px;
   margin-bottom: 10px; }
+
+.data-button-container {
+  display: flex;
+  justify-content: space-between; }
