--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -13,3 +13,8 @@
   padding-left: 5px;
   margin-bottom: 10px;
 }
+
+.data-button-container {
+  display: flex;
+  justify-content: space-between;
+}
