--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -37,6 +37,10 @@
   padding-left: 5px;
   margin-bottom: 10px; }
 
+.data-button-container {
+  display: flex;
+  justify-content: space-between; }
+
 .card-container {
   display: flex;
   justify-content: space-around;
