--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -2,8 +2,7 @@
 
 .app-render {
   text-align: center;
-  background-color: rgb(138, 141, 144);
-  padding-top: 10px;
+  background-image: url("../../assets/books-bg.jpg");
 }
 
 .search-input {
