--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -1,2 +1,14 @@
 $my-color: rgba(75, 65, 64, 0);
 $border-radius: 5px;
+$light-primary: rgba(255, 254, 213, 1);
+$light-primary-o: rgba(255, 254, 213, .85);
+$dark-primary: rgba(68, 58, 48, 1);
+$dark-accent: rgba(165, 144, 7, 1);
+$dark-neutral: rgba(171, 162, 135, 1);
+$pos-primary: rgba(165, 199, 109, 1);
+$pos-accent: rgba(133, 163, 53, 1);
+$neg-primary: rgba(217, 89, 76, 1);
+$neg-accent: rgba(217, 89, 76, 1);
+$pop-accent: rgba(37, 206, 209, 1);
+$open-sans: 'Open Sans', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
