--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -1,5 +1,8 @@
 @import '../Card/Card.scss';
+@import '../ComparedCard/ComparedCard.scss';
 @import '../App/App.scss';
+@import '../Controls/Controls.scss';
+@import '../DataButton/DataButton.scss';
 @import '../CardContainer/CardContainer.scss';
 @import '../CompareContainer/CompareContainer.scss';
 
