--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -1,30 +1,44 @@
 .card {
   display: inline-block;
-  width: 200px;
+  width: 250px;
+  height: 250px;
+  overflow: scroll;
   font-size: .85em;
   margin: 10px;
   border: none;
   border-radius: 5px;
-  background-color: #2584e4; }
+  background-color: rgba(255, 254, 213, 0.85);
+  padding: 10px;
+  box-sizing: border-box; }
+
+.card:hover {
+  background-color: #fffed5;
+  border: 5px solid #25ced1; }
 
 .active {
-  border: 2px solid green; }
+  border: 5px solid #25ced1; }
 
 .card-header {
+  font-family: "Montserrat", sans-serif;
   font-size: 1.05em;
   font-weight: bold;
   margin: 5px;
   text-align: center; }
 
-.p-container {
+.p-container p {
   width: 80px;
-  margin: 10px auto 10px auto; }
+  margin: 10px auto 10px auto;
+  font-family: "Open Sans", sans-serif; }
 
 .less-than-half {
-  color: red;
+  color: #d9594c;
   font-size: .75em; }
 
 .more-than-half {
-  color: green;
+  color: #85a335;
   font-size: .85em;
-  font-weight: bold; }
+  font-weight: bold;
+  text-decoration: underline; }
+
+.district-average {
+  font-family: "Montserrat", sans-serif; }
