--- a/src/ComparedCard/ComparedCard.scss
+++ b/src/ComparedCard/ComparedCard.scss
@@ -1,3 +1,8 @@
-.ComparedCard {
-  
+@import '../Styles/variables.scss';
+
+.compared-cards {
+  color: $pop-accent;
+  height: 50px;
+  text-align: center;
+  padding-top: 15px;
 }
